Changes for electron build

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#eeeeee">
+    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'sha256-e6UOwOESGLM5qaSkfrIwlUstmmxlrGyUsunF2lribd4=';"> -->
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -19,6 +20,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--
+      Content-Security-Policy will break when using the Docker Image to change
+      the variable.  Compute the new hash as part of the entrypoint.sh
+      See: https://content-security-policy.com/hash/
+    -->
     <script type="text/javascript">
         var VIDISPINE_URL = "$VIDISPINE_URL";
     </script>
@@ -29,6 +35,7 @@
         margin: 0;
         padding: 0;
         font-family: sans-serif;
+        /* -webkit-app-region: drag; */
     }
     </style>
   </head>
