enable cors proxy when running in a container

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <script type="text/javascript">
         var VIDISPINE_URL = "$VIDISPINE_URL";
+        var CONTAINER_PROXY = "$CONTAINER_PROXY";
     </script>
     <title>VidiCore Admin</title>
     <style>
